edit layout name contacts mobile to events

--- a/src/assets/styles/tabsYourFurniActivityItem.module.scss
+++ b/src/assets/styles/tabsYourFurniActivityItem.module.scss
@@ -51,17 +51,28 @@
     }
 
     &__name {
-        text-align: left;
-        flex: 1 1 auto;
+        display: grid;
+        grid-template-columns: 24px 1fr;
+        gap: 12px;
+        margin-right: 15px;
         min-width: 130px;
+    }
+
+    &__name.detalContent {
+        grid-template-columns: 1fr;
     }
 
     &__item {
         text-align: right;
+        white-space: nowrap;
 
         &:not(:last-child) {
             margin-right: 33px;
         }
+    }
+
+    &__text {
+        align-self: center;
     }
 
     &__showDetailsContact {
