--- a/src/assets/styles/tabsYourFurniActivityItem.module.scss
+++ b/src/assets/styles/tabsYourFurniActivityItem.module.scss
@@ -55,7 +55,7 @@
         grid-template-columns: 24px 1fr;
         gap: 12px;
         margin-right: 15px;
-        min-width: 130px;
+        // min-width: 130px;
     }
 
     &__name.detalContent {
